<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClinicActivity"
    android:orientation="vertical"
    android:background="@drawable/activity_background">

    <ListView
        android:id="@+id/dentistList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/addDentist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <Button
        android:id="@+id/deleteDentist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/backDentist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"/>

</LinearLayout>