<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dental"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/teeth"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teethClick"
        android:orientation="vertical"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <View
                android:layout_marginTop="2dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/green"/>
            <View
                android:layout_marginTop="2dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/red"/>
            <View
                android:layout_marginTop="2dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/dkgray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/teeth"
                android:text="@string/st1"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/teeth"
                android:text="@string/st2"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="@color/teeth"
                android:text="@string/st3"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnClinic"
        android:text="@string/clinics"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDentist"
        android:text="@string/dentists"/>

</LinearLayout>